# TOMP-REF

./: .gitignore  README.md  pom.xml  start.bat
scripts/: plan-and-book.bat  post.bat  setheaders.bat
src/main/resources/: application.properties  application.yml  assets.json  bikes.json  cars.json  system-info-generic.json
tomp-api-web-app/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
tomp-api-web-app/src/: index.html  styles.scss
tomp-api-web-app/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.module.ts
tomp-api-web-app/src/assets/: endpoints-0.6.0.json  endpoints-0.9.0.json  endpoints.json
tomp_api_web_app/: README.md  angular.json
tomp_api_web_app/e2e/src/: app.e2e-spec.ts
tomp_meta/: .project  pom.xml  tomp-meta-dir-.yaml  tomp-meta-dir.yaml
tomp_quickstart_oi/: Dockerfile  README.md  repair_swagger.ps1  setup.py
tomp_quickstart_oi/base/: config_util.py  json_util.py
tomp_quickstart_oi/default/: alerts.json  available_assets.json  information.json  meta.json  operating_calendar.json  operating_hours.json  pricing_plans.json  regions.json  stations.json
tomp_quickstart_oi/patch/: parameter.py
tomp_quickstart_oi/swagger_server/: __main__.py
tomp_ready/: .project  pom.xml
tomp_ref/: README.md  demo.bat  pom.xml  start.bat  startMeta.bat
tomp_ref/scripts/: planning-options-body.json
tomp_ref_java/: pom.xml  start.bat
tomp_ref_java/scripts/: plan-and-book.bat  planning-options-body.json
tomp_ref_python/: README.md  TOMP-API.yaml  app.py  pyproject.toml
(+768 files in other folders)
